<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeadSplashActivity"
    android:background="@color/transparentBackground"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:cardElevation="5dp"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/transparentBackground"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/app_name"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="200dp"
                android:background="@drawable/round_imge_background"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/sancity"
                android:padding="50dp"
                android:layout_marginTop="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/app_info" />



        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>