<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2.5"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="3dp">
        <ImageView
            android:background="#1E88E5"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sancity"
            android:scaleType="fitXY"
            android:padding="2dp"
            android:layout_height="match_parent"
            />

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="3dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2.5"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@color/splashColor"
                android:textSize="18sp"
                android:gravity="bottom"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:text="@string/user_name"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                    <EditText
                        android:textAllCaps="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/userId"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/user_name_Hint"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userPassword"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/password_hint"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@color/splashColor"
                android:id="@+id/userLoginBtn"
                android:text="@string/app_Login"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>