<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white"
    tools:context=".SubmitActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardElevation="5dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp"
        >
    <ImageView
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lead_Image"
        android:padding="6dp"
        android:background="@android:drawable/gallery_thumb"
        android:contentDescription="@string/lead_image"
        android:src="@android:drawable/ic_menu_camera"/>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/metLayout"
            android:layout_height="wrap_content">

            <TextView
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/metkId"
                android:text="@string/met_state"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/transparentBackground"/>

            <RadioGroup
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/metGruopId"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/metRadio"
                    android:text="@string/let_met"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/notmetRadio"
                    android:text="@string/let_Notmet"/>
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        app:cardCornerRadius="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feedBackId"
                android:text="@string/leaf_Feedback"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/transparentBackground"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:id="@+id/feedBackEditor"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:hint="@string/leaf_Feedbackhint"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:id="@+id/statusSelector"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rejectionEditor"
                android:visibility="gone" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/transparentBackground"/>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/followLayout">

                <TextView
                    android:textColor="@color/blackColor"
                    android:visibility="gone"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:id="@+id/followorsitevisit"
                    android:text="Follow Up Date and Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            <TextView
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/followupId"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingStart="40dp" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/siteVisitDate"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:layout_marginStart="20dp" />
            <TextView
                android:visibility="gone"
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/followTime"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingStart="40dp" />
            <LinearLayout
                android:id="@+id/paymentVisible"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <EditText
                android:hint="Enter Receipt No"
                android:id="@+id/etReciptNo"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                />

            <EditText
                android:id="@+id/etAmount"
                android:hint="Enter Amount"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                />
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    app:cardElevation="5dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="3dp"
                    >
                    <ImageView
                        android:id="@+id/receipt_Photo"
                        android:scaleType="fitXY"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp"
                        android:background="@android:drawable/gallery_thumb"
                        android:contentDescription="@string/lead_image"
                        android:src="@android:drawable/ic_menu_camera"/>
                </android.support.v7.widget.CardView>

                <Button
                    android:layout_marginRight="5dp"
                    android:background="@color/redColor"
                    android:layout_gravity="end"
                    android:text="Upload Pic"
                    android:id="@+id/uploadPic"
                    android:layout_width="wrap_content"
                    android:layout_height="35dip" />
            </LinearLayout>




        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splashColor"
        android:id="@+id/leadSubmit"
        android:text="@string/submit_lead"
        android:textColor="@color/white"
        android:textAllCaps="false"/>
    </LinearLayout>
    </ScrollView>


</LinearLayout>