<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowSiteActivity"
    android:id="@+id/refreshFollowSite">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/todayLayout">

        <TextView
            android:layout_marginBottom="2dp"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textSize="18sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/today_follow"
            android:id="@+id/todayTxt"
            android:background="@color/splashColor"
            android:textStyle="bold"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/todayFollowUps"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/previousLayout">
            <TextView
                android:layout_marginBottom="2dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="5dp"
                android:id="@+id/previousTxt"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:textSize="18sp"
                android:text="@string/previous_followups"
                android:background="@color/splashColor"
                android:textStyle="bold"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/previousFollowUps"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/featureLayout">
        <TextView
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:id="@+id/featureTxt"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textSize="18sp"
            android:text="@string/feature_follow"
            android:background="@color/splashColor"
            android:textStyle="bold"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/featureFollowUps"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>